--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,21 @@ ul {
     }
 
 }
+
+@media only screen and (max-width: 668px) {
+
+    nav {
+        justify-content: flex-start;
+        align-items: flex-start;
+        padding-top: 100px;
+    }
+
+    a {
+        font-size: 24px;
+    }
+
+    li {
+        margin-bottom: 20px;
+    }
+
+}
