--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,18 @@ ul {
     list-style-type: none;
 }
 
+li {
+    margin-bottom: 20px;
+}
+
+.contact{
+    display: flex;
+    font-size: 2em;
+    align-items: center;
+    justify-content: end;
+    padding: 20px;
+}
+
 @media (prefers-color-scheme: light) {
 
     a {
@@ -25,8 +37,12 @@ ul {
     }
 
     a:hover {
-        color: #1A30FF;
+        color: #fa6400;
         transition: 0.5s;
+    }
+
+    .contact{
+        color: #003A70;
     }
 
 }
@@ -45,8 +61,12 @@ ul {
     }
 
     a:hover {
-        color: #808CFF;
+        color: #32cd32;
         transition: 0.5s;
+    }
+
+    .contact{
+        color: #ff8df6;
     }
 
 }
@@ -61,10 +81,6 @@ ul {
 
     a {
         font-size: 24px;
-    }
-
-    li {
-        margin-bottom: 20px;
     }
 
 }
