--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,18 @@
     margin: 0; 
 }
 
+h1{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    padding: 20px;
+    text-align: center;
+}
+
 nav {
     display: flex;
     width: 100%;
-    height: 100vh;
+    padding-top: 20vh;
     justify-content: center;
     align-items: center;
 }
@@ -21,14 +29,16 @@ li {
 
 .contact{
     display: flex;
+    width: 100%;
+    justify-content: center;
     font-size: 2em;
-    align-items: center;
-    justify-content: end;
     padding: 20px;
+    position: fixed;
+    bottom: 0;
 }
 
 @media (prefers-color-scheme: light) {
-
+    
     a {
         font-size: 64px;
         text-decoration: none;
@@ -49,9 +59,11 @@ li {
 
 @media (prefers-color-scheme: dark) {
     
-    header {
+    body {
         background-color: black;
     }
+
+    h1{color: white;}
 
     a {
         font-size: 64px;
@@ -66,7 +78,11 @@ li {
     }
 
     .contact{
-        color: #ff8df6;
+        color: #fa6400;
+    }
+
+    .contact:hover{
+        color: #0096FF;
     }
 
 }
@@ -80,7 +96,11 @@ li {
     }
 
     a {
-        font-size: 24px;
+        font-size: 2em;
+    }
+
+    .contact{
+        font-size: 1.5em;
     }
 
 }
