--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ h1{
 nav {
     display: flex;
     width: 100%;
-    padding-top: 20vh;
+    padding-top: 15vh;
     justify-content: center;
     align-items: center;
 }
@@ -31,7 +31,7 @@ li {
     display: flex;
     width: 100%;
     justify-content: center;
-    font-size: 2em;
+    font-size: 1.5em;
     padding: 20px;
     position: fixed;
     bottom: 0;
@@ -53,6 +53,7 @@ li {
 
     .contact{
         color: #003A70;
+      	background-color: white;
     }
 
 }
@@ -79,6 +80,7 @@ li {
 
     .contact{
         color: #fa6400;
+      	background-color: black;
     }
 
     .contact:hover{
@@ -89,7 +91,12 @@ li {
 
 @media only screen and (max-width: 668px) {
 
-    nav {
+  h1{
+    justify-content: start;
+    text-align: left;
+  }  
+  
+  nav {
         justify-content: flex-start;
         align-items: flex-start;
         padding-top: 100px;
