--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ li {
 }
 
 a {
-    font-size: 48px;
+    font-size: 40px;
     text-decoration: none;
     transition: 0.5s;
 }
@@ -135,6 +135,10 @@ a {
 
     h2{
         font-size: 48px;
+    }
+
+    ul{
+        padding: 0;
     }
 
     a {
