--- a/styles.css
+++ b/styles.css
@@ -150,7 +150,7 @@ a {
     }
 
     .fp{
-        padding: 0 10px;
+        padding: 0;
         margin: 30px 0 100px 0;
         max-width: 360px;
     }
